log
Fri 05 May 2023 06:28:06 PM UTC: 
 tests:  0|5
total_score: 0/70
934665f
Fri 05 May 2023 06:35:36 PM UTC: 
 sudoku.c | 38 +++++++++++++++++++++++++-------------
 1 file changed, 25 insertions(+), 13 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:68:16: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   68 |         return list;
      |                ^~~~
      |                List
sudoku.c:68:16: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:74:1: error: control reaches end of non-void function [-Werror=return-type]
   74 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
30c225c
Fri 05 May 2023 06:35:46 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
d6ede6e
Fri 05 May 2023 06:42:52 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
9ec92bd
Fri 05 May 2023 06:43:17 PM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
382ebd0
Fri 05 May 2023 06:45:20 PM UTC: 
 sudoku.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
7034d81
Sat 06 May 2023 04:46:05 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|3
total_score: 35/70
a3d579c
Sat 06 May 2023 04:49:27 PM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  5|3
total_score: 35/70
9e60b30
Sat 06 May 2023 04:49:36 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
3c37455
Sat 06 May 2023 04:49:44 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
e6b36a6
Sat 06 May 2023 04:49:55 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
3613994
Sat 06 May 2023 04:54:01 PM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  5|3
total_score: 35/70
5f6155d
Sat 06 May 2023 04:54:15 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
1354cd3
Sat 06 May 2023 04:54:35 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
48584cf
Sat 06 May 2023 04:55:04 PM UTC: 
 sudoku.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
98a523c
Sat 06 May 2023 04:55:13 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
5bb4f42
Sat 06 May 2023 04:55:38 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
14409f2
Sat 06 May 2023 04:55:46 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
1c6e069
Sat 06 May 2023 04:55:54 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
7248349
Sat 06 May 2023 04:56:32 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
cdf3afd
Sat 06 May 2023 07:43:47 PM UTC: 
 sudoku.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
9303067
Sat 06 May 2023 10:16:23 PM UTC: 
 sudoku.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
804cfaf
